--- a/scss/oa2.scss
+++ b/scss/oa2.scss
@@ -108,3 +108,46 @@ html {
     @include opacity(1);
   }
 }
+
+
+
+#select {
+  display: inline-block;
+  width: 120px;
+  height: 32px;
+  line-height: 32px;
+  border: 1px solid rgba(210, 210, 210, 1);
+  position: relative;
+  background-color: white;
+  @include border-radius(3px);
+  overflow: hidden;
+
+  > select {
+    position: relative;
+    border: 0;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: transparent;
+
+    &:focus {
+      border: 0;
+      outline: 0;
+    }
+  }
+  &:before {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    z-index: 1;
+
+    text-align: center;
+  }
+}
