--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -81,6 +81,40 @@ $contentWidth: 980px;
       }
     }
   }
+
+  @include range-width(320px, 1000px) {
+    .center {
+      width: 100%;
+
+      .logo {
+        width: calc( 100% - 100px);
+        text-align: center;
+        float: left;
+      }
+      .menu {
+        display: none;
+      }
+    }
+  }
+
+  @include range-width(0, 320px) {
+    .center {
+      width: 100%;
+      height: 80px;
+
+      .logo {
+        width: calc( 100% - 120px);
+        height: 100%;
+        text-align: center;
+        float: left;
+        font-size: 35px;
+        line-height: 80px;
+      }
+      .menu {
+        display: none;
+      }
+    }
+  }
 }
 
 #blog {
@@ -93,6 +127,12 @@ $contentWidth: 980px;
   text-align: center;
   height: 158px;
   line-height: 158px;
+
+  @include range-width(0, 320px) {
+    height: 140px;
+    line-height: 140px;
+    font-size: 50px;
+  }
 }
 
 
@@ -140,6 +180,100 @@ $contentWidth: 980px;
       cursor: pointer;
     }
   }
+  #select {
+    display: none;
+  }
+
+  @include range-width( 0, 1000px ) {
+    padding:0 10px 0 10px;
+    @include box-shadow(0 0 10px rgba(0, 0, 0, .5));
+
+    .center {
+      display: none;
+    }
+
+    #select {
+      position: relative;
+      display: inline-block;
+      width: 100%;
+      height: 50px;
+      line-height: 50px;
+      position: relative;
+      background-color: white;
+      @include border-radius(3px);
+      overflow: hidden;
+      // z-index: 5;
+
+      > select {
+        position: relative;
+        border: 0;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        background-color: transparent;
+
+        &:focus {
+          border: 0;
+          outline: 0;
+        }
+      }
+      &:before {
+        position: absolute;
+        right: 0;
+        top: 0;
+        display: inline-block;
+        width: 32px;
+        height: 32px;
+        line-height: 32px;
+        z-index: 1;
+
+        text-align: center;
+      }
+    }
+
+  }
+
+}
+
+#sign {
+  display: none;
+  position: relative;
+  z-index: 5;
+  width: 100%;
+  background-color: #05af34;
+  text-align: center;
+
+  .center {
+    display: inline-block;
+    width: calc(100% - 40px);
+    height: 50px;
+    @include clearfix();
+
+    span {
+      display: inline-block;
+      font-size: 15px;
+      line-height: 50px;
+      float: left;
+      color: white;
+      cursor: pointer;
+
+      &:last-child {
+        float: right;
+      }
+    }
+  }
+
+  @include range-width( 320px, 1000px ) {
+    display: inline-block;
+  }
+
+  @include range-width( 0, 320px ) {
+    display: inline-block;
+  }
+
 }
 
 #container {
@@ -154,6 +288,8 @@ $contentWidth: 980px;
     display: inline-block;
     width: $contentWidth;
     padding: 20px;
+    @include column-count(2);
+    @include column-gap(calc( #{$contentWidth} - 20px * 2 - 454px * 2));
 
     > * {
       display: inline-block;
@@ -163,10 +299,10 @@ $contentWidth: 980px;
       width: 454px;
       height: auto;
       margin-bottom: 30px;
+      break-inside: avoid;
 
       &:nth-child(2n + 1) {
-        margin-right: 30px;
-        // margin-right: calc( #{$contentWidth} - 20px * 2 - 454px * 2);
+        margin-right: calc( #{$contentWidth} - 20px * 2 - 454px * 2);
       }
 
       &:last-child {
@@ -177,7 +313,7 @@ $contentWidth: 980px;
         display: inline-block;
         width: 454px;
         height: 248px;
-        background-color: rgba(97, 95, 98, 0.1);
+        background-color: rgb(241, 232, 232);
         padding: 24px 29px 24px 29px;
 
         > * {
@@ -227,6 +363,7 @@ $contentWidth: 980px;
           line-height: 20px;
           padding-bottom: 23px;
           border-bottom: 1px solid rgba(171, 167, 170, .5);
+          text-align: left;
         }
 
         .footer {
@@ -240,10 +377,52 @@ $contentWidth: 980px;
       }
 
     }
+  }
+
+  @include range-width( 320px, 1000px ) {
+    background-color: rgb(189, 190, 185);
+
+    .center {
+      position: relative;
+      width: 100%;
+      padding: 0px;
+      @include column-count(1);
+      @include column-gap(0);
+
+      .box {
+        position: relative;
+        display: inline-block;
+        width: 100%;
+        height: auto;
+        margin-bottom: 20px;
+
+        &:first-child {
+          margin-top: 20px;
+        }
+        img {
+          width: 100%;
+          height: 100%;
+        }
+
+        .content {
+          width: 100%;
+          height: auto;
+
+          .title {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 10px;
+          }
+
+          .header {
+            width: 100%;
+          }
 
 
+        }
 
-
+      }
+    }
   }
 }
 
